Workers can have sticky models
